Extension init: grab ILabShell and IDocumentManager

--- a/jupyter-extension/package.json
+++ b/jupyter-extension/package.json
@@ -56,7 +56,9 @@
         "watch:labextension": "jupyter labextension watch ."
     },
     "dependencies": {
-        "@jupyterlab/application": "^4.0.0",
+        "@jupyterlab/application": "^4.3.6",
+        "@jupyterlab/apputils": "^4.4.6",
+        "@jupyterlab/docmanager": "^4.3.6",
         "@jupyterlab/settingregistry": "^4.0.0"
     },
     "devDependencies": {
