Setup & build scripts

--- a/jupyter-extension/tsconfig.json
+++ b/jupyter-extension/tsconfig.json
@@ -9,14 +9,14 @@
     "lib": ["DOM", "ES2018", "ES2020.Intl"],
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
+    "noEmitOnError": false,
+    "noImplicitAny": false,
+    "noUnusedLocals": false,
     "preserveWatchOutput": true,
     "resolveJsonModule": true,
     "outDir": "lib",
     "rootDir": "src",
-    "strict": true,
+    "strict": false,
     "strictNullChecks": true,
     "target": "ES2018"
   },
