--- a/jupyter-extension/package.json
+++ b/jupyter-extension/package.json
@@ -60,6 +60,7 @@
         "@jupyterlab/apputils": "^4.4.6",
         "@jupyterlab/docmanager": "^4.3.6",
         "@jupyterlab/docregistry": "^4.3.6",
+        "@jupyterlab/notebook": "^4.3.6",
         "@jupyterlab/services": "^7.3.6",
         "@jupyterlab/settingregistry": "^4.0.0"
     },
