--- a/jupyter-extension/.github/workflows/build.yml
+++ b/jupyter-extension/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         python -m pip install .[test]
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "notebookpack-runtime.*OK"
+        jupyter labextension list 2>&1 | grep -ie "ipycheckpoint-runtime.*OK"
         python -m jupyterlab.browser_check
 
     - name: Package the extension
@@ -45,13 +45,13 @@ jobs:
 
         pip install build
         python -m build
-        pip uninstall -y "notebookpack_runtime" jupyterlab
+        pip uninstall -y "ipycheckpoint_runtime" jupyterlab
 
     - name: Upload extension packages
       uses: actions/upload-artifact@v4
       with:
         name: extension-artifacts
-        path: dist/notebookpack_runtime*
+        path: dist/ipycheckpoint_runtime*
         if-no-files-found: error
 
   test_isolated:
@@ -74,11 +74,11 @@ jobs:
         sudo rm -rf $(which node)
         sudo rm -rf $(which node)
 
-        pip install "jupyterlab>=4.0.0,<5" notebookpack_runtime*.whl
+        pip install "jupyterlab>=4.0.0,<5" ipycheckpoint_runtime*.whl
 
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "notebookpack-runtime.*OK"
+        jupyter labextension list 2>&1 | grep -ie "ipycheckpoint-runtime.*OK"
         python -m jupyterlab.browser_check --no-browser-test
 
 
