Set up submodule to track the indexeddb-packaga-cache branch in franekp/pyodide-kernel

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "pyodide-kernel"]
 	path = pyodide-kernel
 	url = https://github.com/franekp/pyodide-kernel.git
+	branch = "indexeddb-package-cache"
