--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "pyodide-kernel"]
 	path = pyodide-kernel
 	url = https://github.com/franekp/pyodide-kernel.git
-	branch = "indexeddb-package-cache"
+	branch = indexeddb-package-cache
